# neural-network-cpp

./: .gitignore  CMakeLists.txt  GenerateVSProject.cmd  LICENSE.md  README.md
.github/workflows/: cmake-single-platform.yml
Source/ANN/: CMakeLists.txt
Source/ANN/Source/: ANN.cpp  ANN.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  MemoryStream.cpp  MemoryStream.h  Random.cpp  Random.h  pch.h
Source/CompareANN/: CMakeLists.txt
Source/CompareANN/Source/: main.cpp
Source/DigitClassification/: CMakeLists.txt
Source/DigitClassification/Source/: ImageLoaderPNG.cpp  ImageLoaderPNG.h  main.cpp  pch.h
Source/FlappyDoge/: CMakeLists.txt  README.md
Source/FlappyDoge/Source/: doge.cpp  doge.h  game.cpp  game.h  land.cpp  land.h  lib.cpp  lib.h  main.cpp  pipe.cpp  pipe.h  sound.cpp  sound.h
Source/Snake/: CMakeLists.txt
Source/Snake/Source/: Collideable.cpp  Collideable.hpp  Drawable.hpp  Food.cpp  Food.hpp  README.md  Screen.cpp  Screen.hpp  Section.cpp  Section.hpp  Snake.cpp  Snake.hpp  Wall.cpp  Wall.hpp  main.cpp
Source/XOR/: CMakeLists.txt
Source/XOR/Source/: main.cpp
